- Advanced search using date range did not return stories or comments in
  that date range (Mark)

Forum
-----
- Set width for text formatted code blocks in forum when using a fixed width
  layout (Eric)
- Fixed issue where duplicate forum names (different categories) did not show
  in the forum selection list for moderation functions. (Mark)

Media Gallery
-------------
- Email moderators option did not appear in album edit / create (Mark)
- Under some circumstances creating an album would fail with an SQL error (Mark)
- Fixed issue where 'slideshow' auto tag did not honor the media_order
  field (Mark).
- FTP batch import would crash with SQL error (Mark)
- 0000428 Wiki type keywords - Added [alink] auto tag to allow text links
  to albums (Mark)
- 0000437 Slideshow autotag does not honor caption option in config. (Mark)
- Improved error handling when a user tries to access a media item they
  do not have permission to view (Mark)
- Random image block did not change (Mark)

Site Tailor
-----------
- 0000434: [Menu] copy menu does not work (mark)

v1.1.3
------
- What's New block did not honor the URL rewrite setting for stories (Mark)
- 0000424: Reorder fields on 'Username & Password' tab to be more intuitive (Eric)
- Increased size of Forum category title text (Eric)
- Limit long term session cookie to user's ip to limit chances of
  user masquerading (Mark)
- 0000289 cleanup story options and incorporate template options (mark)
- 0000423 Not all staticpage options are cloned (mark)
- 0000369 Can we make theme code name-neutral (again) (mark)
- 0000405/0000289 Removed PDF option references and consistency fixes in story templates (Eric)
- Fixed issue where 1 or 111 would show up in templates (Mark)
- Fixed old reference to css.php in FCKeditor (Mark)
- Updated getID3() to latest production release (Mark)
- 0000330: Static page bullets not working in IE and proper nesting of typography icons (Eric)
- 0000403: Search box text is hard coded in header.thtml (Eric)