@@ -97,7 +97,7 @@ function MG_index() {
 	));
 
 	if ( $_MG_CONF['rss_full_enabled'] ) {
-	    $rsslink = '<a href="' . $_MG_CONF['site_url'] . '/rss/' . $_MG_CONF['rss_feed_name'] . '.rss"' . ' type="application/rss+xml">';
+	    $rsslink = '<a href="' . $_CONF['site_url'] . '/backend/' . $_MG_CONF['rss_feed_name'] . '.rss"' . ' type="application/rss+xml">';
 	    $rsslink .= '<img src="' . MG_getImageFile('feed.png') . '" alt="" style="border:none;"' . XHTML . '></a>';
 	    $T->set_var('rsslink', $rsslink);
 	} else {
